--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -1,9 +1,9 @@
 @use 'variables' as v;
 @use 'mixins' as m;
 
-h1, h2, h3 {
+// h1, h2, h3 {
     
-}
+// }
 
 h1 {
     font-size: 4rem;
@@ -17,3 +17,7 @@ h3 {
 .text-center {
     text-align: center;
 }
+
+// [class$="__heading"] {
+
+// }
