--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -48,19 +48,17 @@
 }
 
 @mixin contenedor {
-    max-width: 120rem;
-    width: 95%;
-    width: min($numbers: 95%, 120rem);
+    width: min(95%, 140rem);
     margin: 0 auto;
 }
 
 @mixin contenedor-sm {
-    width: min($numbers: 95%, 60rem);
+    width: min(95%, 60rem);
     margin: 0 auto;
 }
 
 
-@mixin heading {
+@mixin headings {
     font-family: v.$fuente_principal;
     font-weight: v.$black;
     margin: 2rem 0;
@@ -69,7 +67,18 @@
 
 @mixin nombre-pagina {
     @include headings;
-    margin: 6rem;
+    margin: 6rem 0 3rem 0;
     text-align: center;
-    
+
 }
+
+@mixin texto-fluido($min, $max) {
+    font-size: clamp($min, -0.8rem + 10vw  ,$max);
+}
+
+@mixin texto-degradado($inicio, $final) {
+    //background: linear-gradient(to right, $inicio, $final);
+    background-clip: text;
+    -webkit-text-fill-color: linear-gradient(to right, $inicio, $final);
+}
+
