--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -1,9 +1,9 @@
 @use 'variables' as v;
 @use 'mixins' as m;
 
-// h1, h2, h3 {
-    
-// }
+h1, h2, h3 {
+    @include m.headings;   
+}
 
 h1 {
     font-size: 4rem;
@@ -18,6 +18,6 @@ h3 {
     text-align: center;
 }
 
-// [class$="__heading"] {
-
-// }
+[class$="__heading"] {
+    @include m.nombre-pagina;
+}
