--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -77,8 +77,47 @@
 }
 
 @mixin texto-degradado($inicio, $final) {
-    //background: linear-gradient(to right, $inicio, $final);
-    background-clip: text;
-    -webkit-text-fill-color: linear-gradient(to right, $inicio, $final);
+    background-image: linear-gradient(to right, $inicio, $final);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
+@mixin logo {
+    color: v.$blanco;
+    text-align: center;
+    margin-bottom: 2rem;
+    @include desktop {
+        text-align: center;
+        margin: 0;
+    } 
+}
+
+@mixin menu-social($color, $size) {
+    &__enlace {
+        &::before {
+            color: $color;
+            font-size: $size;
+            display: inline-block;
+            font-style: normal;
+            text-rendering: auto;
+            -webkit-font-smoothing: antialiased;
+            font-family: FontAwesome;
+        }
+
+        &[href*="https://www.facebook.com/"]::before {
+            content: "\f39e";
+        }
+
+        &[href*="https://wa.me/"]::before {
+            content: "\f232";
+        }
+
+        &[href*="https://github.com/"]::before {
+            content: "\f09b";
+        }
+    }
+
+    &__ocultar {
+        display: none;
+    }
+}
