--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -27,9 +27,9 @@
         @include m.texto-fluido(2rem, 3rem);
     }
 
-    &__nav {
+    // &__nav {
 
-    }
+    // }
 
     &__form {
         display: flex;
@@ -43,6 +43,7 @@
     &__grid {
         display: flex;
         flex: 1;
+        overflow-y: auto;
     }
 
     &__sidebar {
@@ -87,7 +88,7 @@
     &__contenido {
         width: 100%;
         padding: 1rem 1rem 3rem 1rem;
-
+        overflow-y: scroll;
         @include m.tablet {
             padding: 1rem 5rem 3rem 5rem;
         }
