--- a/src/scss/ui/formulario/_formulario.scss
+++ b/src/scss/ui/formulario/_formulario.scss
@@ -66,6 +66,10 @@
         }
     }
 
+    &__listado {
+        @include m.tags;
+    }
+
     &__submit {
         @include m.boton(v.$azul, v.$blanco);
         width: auto;
