--- a/src/scss/ui/formulario/_formulario.scss
+++ b/src/scss/ui/formulario/_formulario.scss
@@ -49,7 +49,8 @@
         color: rgba(v.$negro, 0.8);
     }
 
-    &__input {
+    &__input,
+    &__select {
         padding: 1rem;
         border: 1px solid darken($color: v.$gris-claro, $amount: 20);
         border-radius: .5rem;
@@ -64,6 +65,11 @@
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
         }
+    }
+
+    &__radio {
+        display: flex;
+        gap: 2rem;
     }
 
     &__texto {
