--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -67,14 +67,20 @@
     font-family: v.$fuente_principal;
     font-weight: v.$black;
     margin: 2rem 0;
-
 }
 
 @mixin nombre-pagina {
     @include headings;
     margin: 6rem 0 3rem 0;
     text-align: center;
+}
 
+@mixin descripcion-pagina {
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: v.$delgada;
+    color: v.$gris-oscuro;
+    margin-bottom: 5rem;
 }
 
 @mixin texto-fluido($min, $max) {
@@ -169,5 +175,16 @@
         font-size: 1.4rem;
         color: v.$blanco;
         font-weight: v.$bold;
+    }
+}
+
+@mixin card {
+    border: 1px solid lighten(v.$gris, 10);
+    padding: 3rem;
+
+    &__nombre {
+        font-weight: v.$black;
+        font-size: 2rem;
+        margin: 2rem 0;
     }
 }
