--- a/src/scss/paginas/_conferencias.scss
+++ b/src/scss/paginas/_conferencias.scss
@@ -26,6 +26,11 @@
             color: v.$secundario;
         }
     }
+
+    .swiper-button-next,
+    .swiper-button-prev {
+        color: rgba(v.$blanco, 0.5);
+    }
 }
 
 .evento {
@@ -39,9 +44,22 @@
         background-color: v.$azul;
         color: v.$blanco;
         transition: 300ms background-color ease;
+        // min-height: 250px;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: space-between;
         &:hover {
             background-color: darken(v.$azul, 10%);
         }
+    }
+
+    &__nombre {
+        font-size: 2rem;
+        margin: 0;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
     }
 
     &__introduccion {
