--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -97,6 +97,7 @@
     color: v.$blanco;
     text-align: center;
     margin-bottom: 2rem;
+    white-space: nowrap;
     @include desktop {
         text-align: center;
         margin: 0;
@@ -145,6 +146,7 @@
     font-weight: v.$bold;
     background-color: transparent;
     border: none;
+    
     &:hover {
         color: v.$azul;
         cursor: pointer;
