--- a/src/scss/ui/header/_header.scss
+++ b/src/scss/ui/header/_header.scss
@@ -30,6 +30,14 @@
         @include m.enlace;
     }
 
+    &__form {
+        display: flex;
+    }
+
+    &__submit {
+        @extend .header__enlace;
+    }
+
     &__contenido {
         padding-top: 10rem;
 
