--- a/src/scss/ui/header/_navegacion.scss
+++ b/src/scss/ui/header/_navegacion.scss
@@ -10,11 +10,13 @@
 
     &__enlace {
         color: v.$blanco;
-        font-size: 2.2rem;
+        font-size: 2rem;
         padding: 2rem;
         font-weight: v.$black;
         text-transform: uppercase;
         text-align: center;
+
+        &--actual,
         &:hover {
             background-color: v.$blanco;
             color: v.$azul;
