--- a/src/scss/paginas/inicio/_speakers.scss
+++ b/src/scss/paginas/inicio/_speakers.scss
@@ -18,6 +18,26 @@
 
 .speaker {
     @include m.card;
+    background-position: center top;
+    background-size: 350px;
+    background-repeat: no-repeat;
+
+    @for $i from 1 through 4 {
+        &:nth-child(4n + #{$i}) {
+            background-image: image-set(
+                url('../img/bg_#{$i}.avif') 1x,
+                url('../img/bg_#{$i}.webp') 1x,
+                url('../img/bg_#{$i}.png') 1x
+            );
+        }
+    }
+
+    &__imagen {
+        min-width: 350px;
+        @include m.tablet {
+            min-width: unset;
+        }
+    }
 
     &__ubicacion {
         color: v.$gris;
