--- a/src/scss/paginas/_paquetes.scss
+++ b/src/scss/paginas/_paquetes.scss
@@ -10,6 +10,11 @@
             align-items: flex-start;
         }
     }
+
+    &__submit {
+        margin-top: 3rem;
+        @include m.boton(v.$azul, v.$blanco);
+    }
 }
 
 .paquete {
