--- a/src/scss/registro/_registro.scss
+++ b/src/scss/registro/_registro.scss
@@ -6,6 +6,7 @@
     
     @include m.tablet {
         display: flex;
+        align-items: flex-start;
         gap: 2rem;
     }
 
@@ -23,16 +24,83 @@
     }
 
     &__heading {
-        &--conferencias {
-            color: v.$azul;
+
+        &--conferencias,
+        &--workshops {
             white-space: nowrap;
             @include m.texto-fluido(2rem, 5rem);
         }
+        &--conferencias {
+            color: v.$azul;
+        }
+        &--workshops {
+            color: v.$secundario;
+            margin-top: 5rem;
+        }
+    }
+
+    &__fecha {
+        margin: 6rem 0 3rem 0;
     }
 }
 
 .registro {
+    color: v.$black;
+    background-color: v.$azul;
+    padding: 3rem;
+    border-radius: 1rem;
     @include m.tablet {
         flex: 0 0 40%;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 3rem;
+    }
+
+    &__heading {
+        margin: 0 0 3rem 0;
+    }
+
+    &__evento {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem;
+        &:nth-child(even) {
+            background-color: lighten($color: v.$azul, $amount: 3);
+        }
+    }
+
+    &__nombre {
+        color: v.$blanco;
+        font-size: 2rem;
+        font-weight: v.$bold;
+        margin: 0;
+    }
+
+    &__eliminar {
+        all: unset;
+        color: v.$rojo;
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    &__regalo {
+        margin-top: 3rem;
+    }
+
+    &__label {
+        display: block;
+        font-size: 2.2rem;
+        font-weight: v.$bold;
+        margin-bottom: 1rem;
+    }
+
+    &__select {
+        width: 100%;
+        background-color: v.$blanco;
+        border: 1px solid v.$gris;
+        padding: 1rem;
+        border-radius: .5rem;
     }
 }
