--- a/src/scss/ui/formulario/_formulario.scss
+++ b/src/scss/ui/formulario/_formulario.scss
@@ -89,8 +89,13 @@
         width: auto;
         align-self: flex-start;
 
-        &--registrar {
+        &--registrar,
+        &--full {
             width: 100%;
+        }
+
+        &--full {
+            background-color: black;
         }
     }
 }
