--- a/src/scss/registro/_registro.scss
+++ b/src/scss/registro/_registro.scss
@@ -66,7 +66,7 @@
         align-items: center;
         padding: 1rem;
         &:nth-child(even) {
-            background-color: lighten($color: v.$gris, $amount: 1);
+            background-color: rgb(255, 244, 180);
         }
     }
 
