--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -122,4 +122,8 @@
         @extend .dashboard__contenedor;
         @include m.contenedor-md;
     }
+
+    &__grafica {
+        @include m.contenedor-md;
+    }
 }
